...
        manualButton = StyleManager.shared.getButton(size: CGSize(width: self.view.frame.size.width/6, height: self.view.frame.size.width/6), center:  CGPoint(x: self.view.frame.size.width/2, y: self.view.frame.size.height/8), image: #imageLiteral(resourceName: "faceid"))
        manualButton.subButton()?.addTarget(self, action: #selector(scanUser), for: .touchUpInside)
        manualButton.layer.zPosition = self.interphoneTableView.layer.zPosition
        self.view.addSubview(manualButton)
        
        // Seatch TextField Setup
        searchTextField = CustomBuilder.makeTextField(width: self.view.frame.size.width*2/3, height: self.interphoneTableView.frame.size.height/9, placeholder: "Inserisci condomino da cercare", keyboardType: .alphabet, capitalized: false, isSecure: false)
        searchTextField.center = CGPoint(x: self.view.frame.size.width/2, y: self.view.frame.size.height - interphoneTableView.frame.size.height - searchTextField.frame.size.height)
        searchTextField.addTarget(self, action: #selector(textFieldDidChange), for: .editingChanged)
        searchTextField.addTarget(self, action: #selector(textFieldSelected), for: .allTouchEvents)
        searchTextField.addTarget(self, action: #selector(textFieldUnselected), for: .editingDidEnd)
        self.view.addSubview(searchTextField)
        
        // Code Button Setup
        let codeButtonCenter = CGPoint(x: self.view.frame.size.width - self.view.frame.size.width/12 - 8, y: UIApplication.shared.statusBarFrame.height + 8 + self.view.frame.size.width/12)
        codeButton = StyleManager.shared.getButton(size: CGSize(width: self.view.frame.size.width/8, height: self.view.frame.size.width/8), center: codeButtonCenter, image: #imageLiteral(resourceName: "keypad"))
        codeButton.subButton()?.addTarget(self, action: #selector(goToCode), for: .touchUpInside)
        codeButton.layer.zPosition = self.interphoneTableView.layer.zPosition
        self.view.addSubview(codeButton)
        
//        codeButton = StyleManager.shared.getButton(size: CGSize(width: self.view.frame.size.width/3, height: self.view.frame.size.width/8), center: CGPoint(x: self.view.frame.size.width/2, y: self.view.frame.size.height - interphoneTableView.frame.height/3 + 32), text: "Accedi con Codice")
//        codeButton.subButton()?.addTarget(self, action: #selector(goToCode), for: .touchUpInside)
...
