...
        self.view.addSubview(goBackButton)
        
        codeTextField = CustomBuilder.makeTextField(width: self.view.frame.size.width/3, height: self.view.frame.size.width/9, placeholder: "Codice utente", keyboardType: .numberPad, capitalized: false, isSecure: true)
        codeTextField.center = CGPoint(x: self.view.frame.size.width/2, y: self.view.frame.size.height/2)
        self.view.addSubview(codeTextField)
        
        accessButton = CustomBuilder.makeButton(width: self.view.frame.size.width/3, height: self.view.frame.size.width/8, text: "Accedi", color: CustomColor.sparklingBlue.uiColor(), textColor: .white)
        accessButton.center = CGPoint(x: self.view.frame.size.width/2, y: self.view.frame.size.height/2 + self.codeTextField.frame.height + 30)
        //accessButton.layer.cornerRadius = accessButton.frame.size.height/4
        accessButton.subButton()?.tintColor = .white
        accessButton.subButton()?.addTarget(self, action: #selector(checkCode), for: .touchUpInside)
        self.view.addSubview(accessButton)
    }
...
