...
    public private(set) var margin: UIEdgeInsets = .zero
    public private(set) var padding: UIEdgeInsets = .init(top: 10, left: 30, bottom: 10, right: 30)
    public private(set) var position: GSMessagePosition = .top
    public private(set) var textColor: UIColor = .white
    public private(set) var textAlignment: GSMessageTextAlignment = .center
    public private(set) var textNumberOfLines: Int = 1
    public private(set) var contentDescription: String = "GSMessageView"
    
    public var messageWidth:  CGFloat {
        return inView.frame.width - margin.horizontal
    }
    public var messageHeight: CGFloat {
        return abs(offsetY) + height
...
